--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 
-#spring.cloud.config.server.git.uri=file:///git-localconfig-repo/limits-service.properties
-spring.cloud.config.server.git.uri=https://github.com/kmlnuriyev/spring-cloud-config-server/blob/master/limits-service.properties
+spring.cloud.config.server.git.uri=file://C:/Users/knuriyev/IdeaProjects/git-local-config-repos
+#spring.cloud.config.server.git.uri=https://github.com/kmlnuriyev/spring-cloud-config-server/blob/master/limits-service.properties
